--- a/all_apps/Facts/templates/facts_css/2_user_facts_page/2_user_facts_page.css
+++ b/all_apps/Facts/templates/facts_css/2_user_facts_page/2_user_facts_page.css
@@ -91,3 +91,12 @@
 .select_category{
     padding-bottom: 10px;
 }
+
+
+.facts_display{
+
+    max-width: 300px;
+    height: 400px;
+    border: 2px solid;
+
+}
