--- a/all_apps/Facts/templates/facts_templates/2_user_facts_page.html
+++ b/all_apps/Facts/templates/facts_templates/2_user_facts_page.html
@@ -81,13 +81,27 @@
             Test Your Facts
         </div>
         
-            
+            <div class="select_wrapper">
             Select category
                 <select name="categories" id="select_categories_test">
 
 
                 </select>
+            </div>
+
+            <div class="button_wrapper">
+
+                <button type="submit" id="give_button"> Give </button>
+
+            </div>
+               
             
+            <div class="fact_display">
+
+
+                    <div class="fact_text"></div>
+
+            </div>
 
    
 
