Random get fact works

--- a/all_apps/Facts/templates/facts_templates/2_user_facts_page.html
+++ b/all_apps/Facts/templates/facts_templates/2_user_facts_page.html
@@ -99,7 +99,7 @@
             <div class="fact_display">
 
 
-                    <div class="fact_text"></div>
+                    <div class="fact_text" id="fact_text"></div>
 
             </div>
 
@@ -123,6 +123,7 @@ get_facts_from_cat_fetch = '{% url "get_facts_from_cat_fetch" %}'
 edit_category_fetch = '{% url "edit_category_fetch" %}'
 user_categories_fetch = '{% url "user_categories_fetch" %}'
 from_category = '{% url "from_category" %}'
+test_fact_fetch = '{% url "test_fact_fetch" %}'
 token_test = '{{csrf_token}}'
 api_key_fetch = '{{api_key_fetch}}'
 >
