--- a/all_apps/Facts/templates/facts_templates/2_user_facts_page.html
+++ b/all_apps/Facts/templates/facts_templates/2_user_facts_page.html
@@ -121,6 +121,7 @@ edit_fact_fetch = '{% url "edit_fact_fetch" %}'
 add_category_fetch = '{% url "add_category_fetch"%}'
 get_facts_from_cat_fetch = '{% url "get_facts_from_cat_fetch" %}'
 edit_category_fetch = '{% url "edit_category_fetch" %}'
+delete_category_fetch = '{% url "delete_category_fetch" %}'
 user_categories_fetch = '{% url "user_categories_fetch" %}'
 from_category = '{% url "from_category" %}'
 test_fact_fetch = '{% url "test_fact_fetch" %}'
