Good word. Need to finish password reset feature

--- a/all_apps/User/templates/user_css/2_login.css
+++ b/all_apps/User/templates/user_css/2_login.css
@@ -32,7 +32,8 @@
 	margin-bottom: 30px;
 
 }
-.wrapper button{
+
+.wrapper #login_button{
     position: relative;
 	display: block;
 	padding: 10px 10px 10px 10px;
@@ -50,6 +51,24 @@
     visibility: hidden;
 }
 
+
+.wrapper #reset_password_btn{
+    position: relative;
+	display: block;
+	padding: 10px 10px 10px 10px;
+	color: #FFF;
+	margin: 0 auto;
+	background: #1abc9c;
+	font-size: 18px;
+	text-align: center;
+	font-style: normal;
+	width: 100%;
+	border: 1px solid #16a085;
+	border-width: 1px 1px 3px;
+	margin-bottom: 10px;
+    border-radius: 10px;
+    
+}
 
 .tooltip_div .tooltiptext{
     visibility: hidden;
