--- a/all_apps/User/templates/user_templates/2_login.html
+++ b/all_apps/User/templates/user_templates/2_login.html
@@ -51,10 +51,11 @@
             </div>
             
             <div class="forgot_password">
-                   <a href="#">Forgot password?</a> 
+
+                   <a href="{% url 'password_reset'%}">Forgot password?</a> 
             </div>
 
-        <button id="button" type="submit">Login</button>
+        <button id="login_button" type="submit">Login</button>
     </form>
 
     </div>
@@ -76,7 +77,7 @@
 
 
     async function ButtonControl(){
-        let button = document.getElementById('button');
+        let button = document.getElementById('login_button');
         
         if(email_line.value=="" || password_line.value==""){
             button.style.visibility="hidden"
