--- a/all_apps/User/templates/user_templates/2_login.html
+++ b/all_apps/User/templates/user_templates/2_login.html
@@ -22,9 +22,9 @@
              </div>
              
              <div class="col" id="error">
-                {%if login_error%}   
-                <legend>Invalid Credentials!</legend> 
-                {%endif%}
+                  
+                <legend>{{error_message}}</legend> 
+                
             </div>
         </div>      
             
