--- a/all_apps/User/templates/user_templates/3_password_reset.html
+++ b/all_apps/User/templates/user_templates/3_password_reset.html
@@ -19,9 +19,9 @@
              </div>
             
              <div class="col" id="error">
-                {%if email_error%}   
-                <legend>This email is not registered!</legend> 
-                {%endif%}
+                 
+                <legend>{{email_error}}</legend> 
+             
             </div>
              
         </div>      
