--- a/templates/account_activation_reset.html
+++ b/templates/account_activation_reset.html
@@ -3,14 +3,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Account Confirmation</title>
+    <title>Account Management</title>
 </head>
 <body>
     
         <h2> Hello! {{name}} {{surname}}</h2>
             
         <div>
-           <a href={{abs_url}}> Click on me to Activate your account and Login</a> 
+           <a href={{abs_url}}> {{text}}</a> 
         </div>
         
         
