--- a/all_apps/User/templates/user_templates/4_reset_link_sent.html
+++ b/all_apps/User/templates/user_templates/4_reset_link_sent.html
@@ -6,6 +6,6 @@
 {% block content %}
 
 
-    An email with reset link has been sent on your email address
+    An email with reset link has been sent to {{email}}
 
 {% endblock%}
