--- a/all_apps/User/templates/user_templates/5_change_password.html
+++ b/all_apps/User/templates/user_templates/5_change_password.html
@@ -1,12 +1,195 @@
-{% extands 'base.html' %}
+{% extends 'base.html' %}
 
 
 
 
 {% block content %}
 
-        Enter your new password
+{% load static %}
 
+<link rel="stylesheet" href="{% static '3_change_password.css'%}">
+
+{%if access is True%}
+
+<div class="wrapper"> 
+    
+    
+    <form action="{% url 'change_password' %}?token={{token}}   v n" method="post">
+        {% csrf_token %}
         
+        <div class="legend_line">
+
+            <div class="col">
+            <legend id="legend"> Password reset form </legend>  
+             </div>
+             
+             <div class="col" id="error">
+                  
+                <legend>{{error_message}}</legend> 
+                
+            </div>
+        </div>      
+            
+        
+            <div class='tooltip_div'>
+                <input id='password1' 
+                    class="line" 
+                    type="password" 
+                    name="password1" 
+                    placeholder="Enter new password"
+                    value={{password1}}>
+                    <span id='password1_tooltip'class="tooltiptext"></span>
+            </div>
+    
+            
+            <div class='tooltip_div'>
+                <input id='password2' 
+                    class="line" 
+                    type="password" 
+                    name="password2" 
+                    placeholder="Confirm password"
+                    value={{password2}}>
+                    <span id='password2_tooltip'class="tooltiptext"></span>
+            </div>
+            
+        
+
+        <button id="reset_password_btn" type="submit">Submit</button>
+
+    </form>
+
+    </div>
+{%endif%}
+
+<script type="text/javascript">
+    var gate =[0,0]
+    let api_key_fetch = '{{api_key_fetch}}'
+    let button = document.getElementById('reset_password_btn');
+
+    let password1 = document.getElementById('password1');
+    let password1_tooltip = document.getElementById('password1_tooltip');
+    
+    let password2 = document.getElementById('password2');
+    let password2_tooltip = document.getElementById('password2_tooltip');
+
+    const success_color = "C0F950"
+    const error_color = "FF969A"
+    const original_color = "E8EEEf"
+
+    document.getElementById('password1').addEventListener('input', function(){
+
+        Password1Control();
+
+    })
+
+
+    document.getElementById('password2').addEventListener('input', function(){
+
+
+        Password2Control();
+
+    })
+
+
+    async function ButtonControl(){
+        let sum = 0;
+        gate.forEach( element=>{
+            sum+=element
+
+        })
+
+        if(sum==2){
+            button.disabled = false;
+        }
+        else{
+            button.disabled = true;
+        }
+
+    }
+
+    async function Password1Control(){
+        
+        let password1_value = document.getElementById('password1').value;
+        let url ="{% url 'password1_control_fetch' %}";
+       
+
+        let body = {
+            'password1':password1_value,
+            'api_key_fetch':api_key_fetch
+
+        };
+
+        fetch(url,
+            {
+                method:'POST',
+                headers:{'Content-type':'application/json','Accept': 'application/json'},
+                body: JSON.stringify(body)
+            }
+        )
+        
+        .then((response)=>response.json())
+        .then( function(data){
+            console.log(data)
+            if(data.message!="OK"){
+                password1_tooltip.innerHTML = ""
+                count=1
+                for(let m of data.message){
+                    password1_tooltip.innerHTML += `${count}) ${m} </br>` 
+                }
+                password1_tooltip.style.visibility='visible'
+                password1.style.backgroundColor=error_color
+                gate[0]=0;
+            }
+            else{
+                password1_tooltip.style.visibility="hidden"
+                password1.style.backgroundColor=success_color
+                gate[0]=1;
+            }
+            ButtonControl();
+        })
+    }
+
+
+    async function Password2Control(){
+    
+    let url = "{% url 'password2_control_fetch' %}"
+
+    let body = {
+        'password1':password1.value,
+        'password2':password2.value,
+        'api_key_fetch':api_key_fetch
+
+    };
+
+    fetch(url,
+        {
+            method:'POST',
+            headers:{'Content-type':'application/json','Accept': 'application/json'},
+            body: JSON.stringify(body)
+        }
+    )
+    .then((response)=>response.json())
+    .then( function(data){
+       
+        if(data.message!="OK"){
+            password2_tooltip.innerHTML = data.message
+            password2_tooltip.style.visibility = 'visible'
+            password2.style.backgroundColor=error_color;
+            gate[1]=0;
+        }
+
+        else{
+            
+            password2_tooltip.style.visibility = 'hidden'
+            password2.style.backgroundColor=success_color;
+            gate[1]=1;
+            
+        }
+        ButtonControl();
+})
+
+}
+
+</script>
 
 {% endblock%}
