Reset password works

--- a/all_apps/User/templates/user_templates/5_change_password.html
+++ b/all_apps/User/templates/user_templates/5_change_password.html
@@ -14,7 +14,7 @@
 <div class="wrapper"> 
     
     
-    <form action="{% url 'change_password' %}?token={{token}}   v n" method="post">
+    <form action="{% url 'change_password' %}?token={{token}}" method="post">
         {% csrf_token %}
         
         <div class="legend_line">
@@ -129,7 +129,7 @@
         
         .then((response)=>response.json())
         .then( function(data){
-            console.log(data)
+          
             if(data.message!="OK"){
                 password1_tooltip.innerHTML = ""
                 count=1
