API key claim reset is added

--- a/all_apps/Facts/templates/facts_templates/2_user_facts_page.html
+++ b/all_apps/Facts/templates/facts_templates/2_user_facts_page.html
@@ -5,6 +5,19 @@
 {% load static %}
 <link rel="stylesheet" href="{% static '2_user_facts_page/2_user_facts_page.css' %}">
 
+<div class="api_wrapper">
+
+    <div class="cell">
+
+            <a href="{% url 'api_info_main_page' %}">API</a>
+    </div>
+
+    <div class="cell">
+            <a href="">Make your facts public</a>
+    </div>
+
+</div>
+
 <div class="user_facts_wrapper">
 
 
