--- a/all_apps/Facts/templates/facts_css/2_user_facts_page/2_user_facts_page.css
+++ b/all_apps/Facts/templates/facts_css/2_user_facts_page/2_user_facts_page.css
@@ -107,3 +107,13 @@
 
     padding: 20px;
 }
+
+.api_wrapper{
+
+    background-color: ghostwhite;
+    border-radius: 10px;
+    padding: 5px;
+    width: 90%;
+    display: table;
+    margin-bottom: 5px;
+}
