good work. Leave message frontend is fine. Now need to make backend processing.

--- a/templates/main_page.html
+++ b/templates/main_page.html
@@ -8,17 +8,17 @@
 <link rel="stylesheet" href="{% static 'css/main_css/main.css' %}" type="text/css" />
 
 
-<div class="welcome-message" >
-    <p>Hello! </p >
-    
+<div class="welcome-message">
+    <p>Hello! </p>
+
     <p>My name is Nursultan Shokobalinov. I am a former Physics teacher.</br>
-    
-    Right now I am learning various tools in order to become a Sofware Developer
-    with a backend concentration.</p>
-    
-    <p>Welcome to my small Heroku hosted website, where hopefully I will place </br>     
-    unrelated to each other apps I made during my learning journey.</p>
-    
+
+        Right now I am learning various tools in order to become a Sofware Developer
+        with a backend concentration.</p>
+
+    <p>Welcome to my small Heroku hosted website, where hopefully I will place </br>
+        unrelated to each other apps I made during my learning journey.</p>
+
     <p>
         This website is implemented with the following:</br>
         a) Backend: Python Django </br>
@@ -26,16 +26,22 @@
         c) DataBase: PostgreSQL: Heroku provided limited version, up to 20 concurrent connections</br>
 
     </p>
-    
-    <div> 
-    <p>
-        If you want to report some issue or a bug related to the BACKEND functionality, please leave a message.
-    </p>
-    
+
+    <div>
+        <p>
+            If you want to report some issue or a bug related to the BACKEND functionality(not Frontend,I know it kind
+            of...sucks),
+            please leave a <span> <a href="{%url 'message'%}">message</a></span>.  
+            
+            I will try to fix it ASAP and reply to you.
+        </p>
+
     </div>
-    
 
     
+
+
+
 
 
 </div>
