--- a/static/css/main_css/message.css
+++ b/static/css/main_css/message.css
@@ -1,22 +1,11 @@
-
-
-
-.welcome-message{
-
-    letter-spacing: 1.5px;
-    line-height: 30px;
-    font-size: 18px;
-    width: 80%;
-}
-
 .row{
     display: table-row;
-    width: 50%;
+    width: 80%;
 }
 
 
 .cell{
-    width: 50%;
+    width: 80%;
     display: table-cell;
     vertical-align: middle;
 }
@@ -31,4 +20,10 @@
 .cell .button:hover{
 
     background-color: azure;
+}
+
+.box{
+
+    height: 50px;
+    font-size: 20px;
 }
